--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scraping-with-mongoose",
   "version": "1.0.0",
-  "description": "",
+  "description": "Scraping Using Moongose",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
